tests/fixtures/syntax/valid/file_contains_heredoc_literal.repor
case "file contains heredoc literal" {
  write <"out/result.json"> ```
    hello
    world
    ```
  $ true
  assert {
    file <"out/result.json"> contains ```
    hello
    world
    ```
  }
}
