tests/fixtures/syntax/invalid/single_line_assert_heredoc_file_contains.repor
case "single line assert heredoc file contains" {
  $ true
  assert { file <"out/result.json"> contains ```
  hello
  ``` }
}
